syntax = "proto3";

option java_multiple_files = true;
option java_package = "edu.sjsu.dtn.adapter.communicationservice";

service DTNAdapter {
  rpc saveData (AppData) returns (AppData) {}
  rpc getData (ClientData) returns (AppData){}
  rpc prepareData (ClientData) returns (Status) {}
}

message AppData {
  string appName = 1;
  string clientId = 2;
  repeated bytes data = 3;
}

message Status {
  int32 code = 1;
  string message = 2;
}

enum StatusCode {
  SUCCESS = 0;
  FAIL = 1;
  MORE_DATA_TO_SEND = 2;
}

message ClientData{
  string clientId = 1;
}

message Empty{

}